--- a/index.html
+++ b/index.html
@@ -139,14 +139,13 @@
 
         <div class="step-select-row">
           <span class="step-label">每次調整：</span>
-          <div class="step-buttons">
-            <button class="step-btn active" data-step="1">1 分</button>
-            <button class="step-btn" data-step="5">5 分</button>
-            <button class="step-btn" data-step="10">10 分</button>
-            <button class="step-btn" data-step="30">30 分</button>
-            <button class="step-btn" data-step="60">60 分</button>
-          </div>
-        </div>
+<div class="step-buttons">
+  <button id="resetBtn" class="step-btn reset-btn">歸零</button>
+  <button class="step-btn" data-step="5">5 分</button>
+  <button class="step-btn" data-step="10">10 分</button>
+  <button class="step-btn" data-step="30">30 分</button>
+  <button class="step-btn" data-step="60">60 分</button>
+</div>
 
 <div class="duration-control">
   <button id="minusBtn" class="round-btn">－</button>
