--- a/index.html
+++ b/index.html
@@ -69,7 +69,23 @@
         <div class="level-small-row">
           小獎狀：<span id="trophyText">0 個</span>（每滿 1 小時送 1 個 🏅）
         </div>
+<!-- 好心情條 -->
+<div class="mood-row">
+  <span class="mood-title">好心情 💗</span>
+  <div class="mood-bar">
+    <div id="moodFill" class="mood-fill"></div>
+  </div>
+  <span id="moodStageLabel" class="mood-label">平靜</span>
+</div>
 
+<!-- 飽足感條 -->
+<div class="mood-row">
+  <span class="mood-title">飽足感 🍽</span>
+  <div class="mood-bar">
+    <div id="satietyFill" class="mood-fill satiety-fill"></div>
+  </div>
+  <span id="satietyLabel" class="mood-label">剛吃飽</span>
+</div>
         <div class="activity-circle-row">
           <!-- 學習 -->
           <div class="activity-circle" data-activity="study">
