--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
+  <link rel="manifest" href="manifest.json">
   <meta charset="UTF-8" />
   <title>熊麻吉：陪你一起成長</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
