--- a/index.html
+++ b/index.html
@@ -393,5 +393,10 @@
   <!-- 星星飛行動畫的元素由 JS 動態插入 -->
 
   <script src="script.js"></script>
+<script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('sw.js');
+}
+</script>
 </body>
 </html>
