--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <link rel="manifest" href="manifest.json">
-  <meta charset="UTF-8" />
+<link rel="manifest" href="manifest.json">
+
+<!-- 一般 favicon（瀏覽器 tab） -->
+<link rel="icon" type="image/png" sizes="192x192" href="icons/bear-icon-192.png">
+
+<!-- iOS / 部分裝置用的 icon -->
+<link rel="apple-touch-icon" href="icons/bear-icon-192.png">
+
+<!-- PWA 樣式顏色 -->
+<meta name="theme-color" content="#FFE5C9">
   <title>熊麻吉：陪你一起成長</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
